--- a/UI/package.json
+++ b/UI/package.json
@@ -18,11 +18,16 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@angular/youtube-player": "^16.2.0",
+    "@ngx-translate/core": "^15.0.0",
+    "@ngx-translate/http-loader": "^8.0.0",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.1",
+    "bootstrap-icons": "^1.10.5",
     "bootswatch": "^5.3.1",
     "jest-editor-support": "*",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.7.23",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
@@ -37,6 +42,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "schematics-scss-migrate": "^2.3.17",
     "typescript": "~5.1.6"
   }
 }
