--- a/UI/package.json
+++ b/UI/package.json
@@ -24,7 +24,7 @@
     "bootstrap": "^5.3.1",
     "bootstrap-icons": "^1.10.5",
     "bootswatch": "^5.3.1",
-    "jest-editor-support": "*",
+    "jest-editor-support": "31.1.1",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.7.23",
     "tslib": "^2.3.0",
